--- a/react-google-homepage/src/index.css
+++ b/react-google-homepage/src/index.css
@@ -23,7 +23,10 @@ ul{
 
 .App {
   background-color: #202124;
+  height: 100vh;
 }
+
+/* Nav section */
 
 .Navbar{
   display: flex;
@@ -32,6 +35,7 @@ ul{
   gap: 20px;
   padding: 14px;
   color: #fff;
+  font-size: 14px;
 }
 
 .Navbar ul{
@@ -53,23 +57,29 @@ ul{
   height: 23px;
   padding: 5px;
   background-color: #00404d;
-  color: white;
   font-weight: 600;
   font-size: 17px;
   font-weight: 500;
   align-items: center;
 }
 
+/* search section */
+
 .search-container{
   width: 41%;
-  padding: 7px 0px;
+  padding: 7px 0;
   margin: 20px auto;
   border-radius: 50px;
-  background: #fff;
-  border: 1px solid #dfe1e5;
+  background: transparent;
+  border: 1px solid #bdc1c6;
   box-shadow: none;
   max-width: 582px;
   height: 30px;
+}
+
+.search-container:hover{
+  background: #bdc1c6;
+
 }
 
 .inputicons{
@@ -106,4 +116,47 @@ ul{
   padding: 0px 3px;
   font-size: 13px;
   font-weight: 500;
+}
+
+footer{
+  /* display: flex;
+  align-items: center;
+  justify-content: space-between; */
+  color: #9aa0a6;
+  /* margin-left: -13px;
+  padding: 0px 15px 0px 15px; */
+}
+
+.left-col ul{
+  font-size: 14px;
+  padding-left: 27px;
+  display: flex;
+}
+
+.footer-container{
+  margin-top: 195px;
+}
+
+.location{
+  padding-left: 27px;
+    border-bottom: 1px solid #3c4043;
+    font-size: 15px;
+    color: #70757a;
+}
+
+.footer-link a, .footer-container{
+  color: #70757a;
+  background: #f2f2f2;
+}
+
+.col-1 a, .col-3 a{
+  padding: 5px;
+}
+
+.col-1 a, .col-2 a, .col-3 a{
+  font-size: 14px;
+}
+
+.col-1, .col-2, .col-3{
+  padding: 15px;
 }
