--- a/react-google-homepage/src/index.css
+++ b/react-google-homepage/src/index.css
@@ -72,7 +72,6 @@ ul {
 
 .search-container {
   width: 45%;
-  /* padding: 12px 0; */
   margin: 20px auto;
   border-radius: 50px;
   background: transparent;
@@ -127,9 +126,10 @@ ul {
 
 .btn {
   padding: 8px 10px;
+  border-radius: 4px;
+  border: 0;
   font-size: 14px;
   background-color: #303134;
-  border-radius: 4px;
   color: #fff;
   white-space: nowrap;
 }
